--- a/Klike/Interfaces/EventDescriptionCell.xib
+++ b/Klike/Interfaces/EventDescriptionCell.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -27,13 +26,15 @@
                         <color key="textColor" red="0.1137254902" green="0.12549019610000001" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crf-PQ-nAd">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crf-PQ-nAd">
                         <rect key="frame" x="16" y="56" width="296" height="73"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <attributedString key="attributedText">
                             <fragment>
-                                <string key="content">In this meeting we are going to discuss designprinciples of the famous scandinavian interior style.</string>
+                                <string key="content">In this meeting we are going to discuss design
+principles of the famous scandinavian interior style.</string>
                                 <attributes>
-                                    <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <font key="NSFont" size="14" name="HelveticaNeue"/>
                                     <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" minimumLineHeight="20"/>
                                 </attributes>
@@ -56,7 +57,6 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottomMargin" secondItem="Q5k-da-RT9" secondAttribute="bottom" priority="999" constant="8" id="3Bh-tw-cRu"/>
                     <constraint firstItem="Q5k-da-RT9" firstAttribute="leading" secondItem="FPh-xa-RKB" secondAttribute="leading" constant="16" id="6rA-HB-hYq"/>
                     <constraint firstItem="crf-PQ-nAd" firstAttribute="top" secondItem="Q5k-da-RT9" secondAttribute="bottom" constant="8" id="9Y6-Xs-PYd"/>
                     <constraint firstItem="FrC-2I-Ffz" firstAttribute="leading" secondItem="Q5k-da-RT9" secondAttribute="trailing" constant="8" id="FxA-EF-cTh"/>
@@ -71,6 +71,11 @@
                     <constraint firstItem="Q5k-da-RT9" firstAttribute="top" secondItem="FPh-xa-RKB" secondAttribute="top" constant="16" id="ywh-by-7yd"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="descriptionLabel" destination="crf-PQ-nAd" id="Ntq-UO-tBb"/>
+                <outlet property="userImage" destination="Q5k-da-RT9" id="iYI-4F-dnu"/>
+                <outlet property="userName" destination="FrC-2I-Ffz" id="fa2-iM-fy6"/>
+            </connections>
             <point key="canvasLocation" x="409" y="415.5"/>
         </tableViewCell>
     </objects>
