--- a/Klike/Sources/Controllers/Gallery/KLGalleryViewController.xib
+++ b/Klike/Sources/Controllers/Gallery/KLGalleryViewController.xib
@@ -14,6 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+            <point key="canvasLocation" x="167" y="404"/>
         </view>
     </objects>
 </document>
